website/app/styles/pages/components/pagination.scss
/**
 * Copyright IBM Corp. 2021, 2025
 * SPDX-License-Identifier: MPL-2.0
 */

// COMPONENTS > PAGINATION

#show-content-components-pagination {
  .doc-pagination-table-demo {
    .hds-table + .hds-pagination {
      margin-top: 16px;
    }
  }

  // Some Pagination examples overflow
  .doc-code-block__code-rendered {
    overflow: auto;
  }
}

